# douyin-mcp-server

./: .gitignore  README.md  douyin-video.skill  pyproject.toml
douyin-video/: SKILL.md
douyin-video/scripts/: douyin_downloader.py
douyin_mcp_server/: __init__.py  server.py
